# MFN

./: CMakeLists.txt  compile_flags.txt  readme.org
include/: category_manager.h  credit_card_manager.h  db_manager.h  log_manager.h  wallet.h  wallet_manager.h
include/etc/: config.h  sql_queries.h  utils.h
src/: category_manager.cc  credit_card_manager.cc  db_manager.cc  log_manager.cc  main.cc  wallet.cc  wallet_manager.cc
src/etc/: sql_queries.cc  utils.cc
test/: category_manager_test.cc  credit_card_manager_test.cc  main_test.cc  wallet_manager_test.cc
